--- a/wedding.css
+++ b/wedding.css
@@ -183,3 +183,9 @@ background-color: gold;}
     pointer-events: none;
     z-index: 9999999 ;
   }
+.day-box:has(.days-left:contains("43")) .days-left {
+  font-size: 10% !important;
+}
+.days-left.days-43 {
+  font-size: 10% !important;
+}
