--- a/wedding.css
+++ b/wedding.css
@@ -162,13 +162,15 @@ background-color: gold;}
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(3.5) rotateY(0deg);
-    font-size: 20%;
+    font-size: 30%;
     z-index: 3;  
     width: 150px;
     height: 100px;
   }
 
-
+.day-box.open .days-left.days-43 {
+  font-size: 10% !important;
+}
   
 .placeholder {
     visibility: hidden;
